[package]
name = "crtshmon"
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/C4K3/crtshmon"
description = "Monitor crt.sh for new certificates"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
itertools = "0.10"
openssl = "0.10"
postgres-openssl = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
structopt = "0.3"
tokio = { version = "1", features = ["full"] }
tokio-postgres = "0.7"
